--- a/css.css/style.css
+++ b/css.css/style.css
@@ -132,6 +132,7 @@
   align-items: center;
 }
 
+
 .estilos-back{
   width: 50%;
   display: flex;
@@ -276,9 +277,11 @@ input, select{
 .arialblack{
   font-family: Arial, Helvetica, sans-serif
 }
-
-.helvetica{
-  font-family: Helvetica;
+.kalam{
+  font-family: 'Kalam', cursive;
+}
+.montserrat{
+  font-family: 'Montserrat', sans-serif;
 }
 .verdana{
   font-family: Verdana;
@@ -292,15 +295,16 @@ input, select{
 .impact{
   font-family: Impact;
 }
-.opensans{
-  font-family: 'Open Sans', sans-serif;
+.ubuntu{
+  font-family: 'Ubuntu', sans-serif;
+}
+.roboto{
+  font-family: 'Roboto Mono', monospace;
 }
 
 .url-fondo{
   margin: 2%;
 }
-
-
 
 /* modo claro/oscuro */
 .day-night{
@@ -342,19 +346,14 @@ input, select{
   background-color: white;
   position: absolute;
   border-radius: 50%;
-  top: 2.5px;
-  left: 2px;
-  right: 2px;
+  top: 0.1563rem;
+  left: 0.125rem;
+  right: 0.125rem;
   transition-duration: 0.5s;
   cursor: pointer;
 
 }
-/*
-body.dark{
-  background-color: black;
-  color: red;
 
-}*/
 
 .fa-adjust{
   display: flex;
@@ -367,16 +366,16 @@ body.dark{
 .download-but{
   border-radius: 10px;
   border-style: none;
-  height: 35px;
-  width: 160px;
+  height: 2.1875rem;
+  width: 10rem;
   background-color: rgb(40, 196, 157);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 500;
   display: flex;
   align-self: flex-end;
-  margin-bottom: 26px;
-  margin-left: 10px;
-  padding: 5px;
+  margin-bottom: 1.3rem;
+  margin-left: 0.625rem;
+  padding: 0.3125rem;
   align-items: center;
   justify-content: center;
   position: absolute;
