correccion errores aside, borde, reestablecer. Btn descarga

--- a/css.css/style.css
+++ b/css.css/style.css
@@ -103,9 +103,11 @@
   
 .center-text{
     width: 100%;
-    height: auto;
+    height: 300px;
     padding: 20%;
     background-color: black;
+   
+    
   }
 
   
