--- a/css.css/style.css
+++ b/css.css/style.css
@@ -42,13 +42,11 @@
   }
   
 .main-title{
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
     margin-top: 3%;
     font-size: 2rem;
-    margin-bottom: 0.62rem;
+    margin-bottom: 0.60rem;
+    display: flex;
+    justify-content: center;
   }
 
 .img-but, .txt-but, .day-night{
@@ -59,6 +57,7 @@
     color: var(--oscuro-azulado);
     background-color: var(--clarito);
     margin: 0.1875rem;
+    outline: none;
   }
 
   .day-night{
@@ -69,6 +68,7 @@
     display: flex;
     justify-content: center;
     width: auto;
+    margin-left: 5%;
   }
 
 .img-but:hover{
@@ -99,6 +99,7 @@
     width: 100%;
     height: 8.125rem;
     padding: 8%;
+    font-size: 2rem;
   }
   
 .center-text{
@@ -106,11 +107,8 @@
     height: 300px;
     padding: 20%;
     background-color: black;
-   
-    
   }
 
-  
  /*estilos aside */
 
 .encabezado{
@@ -120,6 +118,14 @@
   font-size: 0.8rem;
 }
 
+label{
+  font-weight: 600;
+  font-size: 0.9rem;
+}
+
+.texto label{
+  padding-bottom: 2%;
+}
 .color-back{
   display: flex;
   flex-direction: row !important;
@@ -129,7 +135,6 @@
   border-radius: 5px;
   align-items: center;
 }
-
 
 .estilos-back{
   width: 50%;
@@ -174,8 +179,20 @@
 
  input{
    border-style: none;
+   outline: none;
+   border-radius: 5px;
+ }
+ .texto input:focus{
+  box-shadow: 6px 6px 7px var(--oscuro-azulado);
  }
 
+ .texto input, #url-img{
+   box-shadow: 4px 4px 5px var(--fondo-oscuro);
+   border-radius: 4px;
+ }
+ #url-img:focus{
+  box-shadow: 6px 6px 7px var(--oscuro-azulado);
+ }
 
 .aside{
     width: 21.3%;
@@ -187,6 +204,8 @@
   padding: 5% 0;
   text-align: center;
   margin-top: 8%;
+  font-size: 1rem;
+  font-weight: 800;
 }
 
 .aside div{
@@ -202,10 +221,13 @@
 }
 .formulario button{
   border-radius: 3px;
+  border-style: none;
+  outline: none;
 }
 
 .formulario{
   width: 18.75rem;
+  margin-top: auto;
 }
 
 .font-button{
@@ -228,6 +250,7 @@ input, select{
   background-color: var(--gris-mediano);
   color: var(--mas-claro);
 }
+
 #input-size{
   width: 40%;
   margin-right: 2%;
@@ -247,7 +270,7 @@ input, select{
 }
 
 .topcheck{
-  margin-right: 1%;
+  margin-right: 2%;
   
 }
 .buton-contorno button {
@@ -353,7 +376,6 @@ input, select{
 
 }
 
-
 .fa-adjust{
   display: flex;
   flex-direction: row;
@@ -365,16 +387,16 @@ input, select{
 .download-but{
   border-radius: 10px;
   border-style: none;
-  height: 1.8rem;
+  height: 2.2rem;
   width: 10rem;
   background-color: rgb(40, 196, 157);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 500;
   display: flex;
   align-self: flex-end;
-  margin-bottom: 1.3rem;
+  margin-bottom: 1.5rem;
   margin-left: 0.625rem;
-  padding: 0.3125rem;
+  padding: 0.3rem;
   align-items: center;
   justify-content: center;
   position: absolute;
@@ -392,18 +414,49 @@ input, select{
   padding: 3%;
 }
 
+/* estilos range */
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance:none;
+  border: none;
+  border-radius: 50%;
+  background-color: var(--verde-clarito);
+  
+}
+
+/* BTN x Cerrar */
+.checkx{
+  opacity: 0;
+}
+
+.cancel {
+  right: 0.625rem;
+  top: 0.625rem;
+  font-size: 1.2rem;
+  position: absolute;
+  padding: 0.625rem;
+  z-index: 1000;
+}
+
+
 /* Media Queries */ 
+
+@media (min-width: 1200px){
+  .cancel{
+    opacity: 0;
+  }
+}
 
 @media (max-width: 1050px) and (min-width:270px){
   .aside{
     width: 100%;
-      display: none;
-      overflow: scroll;
-
-
+    z-index: 10000;
+    position: absolute;
+    display: block;
+    overflow: scroll;
   }
  .first-section{
    width:100% ;
+   height: 17%;
  }
  .main{
    width: 100%;
@@ -413,12 +466,36 @@ input, select{
    max-height: 5rem;
  }
  .main-title{
-   font-size: 1.5rem;
+   font-size: 1.3rem;
  }
  .botones-centrales{
    align-text: center;
+   margin-left: 10%;
+   font-size: 0.8rem;
  }
  .section{
-   width: 80%;
+   width: 90%;
+ }
+.center-text{
+  max-height: 200px;
+}
+
+ .img, .texto{
+   
+   padding-left: 3%;
+   width: 100%;
+ }
+ label{
+   font-size: 0.8rem;
+ }
+ .formulario{
+   width: 100%;
+ }
+
+ .titulo-aside{
+   font-size: 1rem;
+ }
+ .download-but{
+   margin-top: 0.5rem;
  }
 }
